# CBrain

./: Algorithm_8h.html  Algorithm_8h_source.html  Assert_8h.html  Assert_8h_source.html  CBrain_8h.html  CBrain_8h_source.html  CMakeLists.txt  Image_8h.html  Image_8h_source.html  ImgProc_8h.html  ImgProc_8h_source.html  README.md  Tensor_8h.html  Tensor_8h_source.html  Types_8h.html  Types_8h_source.html  Version_8h.html  Version_8h_source.html  annotated.html  classes.html  custom.css  dir_0712e38f1de0a02fc95d6d65027da5e2.html  dir_25b5a82a77373414b5112d7ec4551a56.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  menudata.js  structCBImage-members.html  structCBImage.html  structCBTensor-members.html  structCBTensor.html
.github/workflows/: Main.yml  cmake.yml
docs/: CMakeLists.txt  Doxyfile.in
docs/custom/: footer.html  header.html
examples/: CMakeLists.txt  EgImage.c  EgImgProc.c  EgTensor.c
examples/digit-recognizer/: CMakeLists.txt  Main.c
include/: CMakeLists.txt
include/CBrain/: ActFunc.h  Algorithm.h  Assert.h  CBrain.h  CostFunc.h  Image.h  ImgProc.h  Layer.h  NeuralNet.h  Tensor.h  Types.h  Version.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
src/: ActFunc.c  Algorithm.c  Assert.c  CMakeLists.txt  CostFunc.c  Image.c  ImgProc.c  Layer.c  NeuralNet.c  Tensor.c
src/Private/: Image.c  Image.h  Layer.c  Layer.h  Memory.c  Memory.h  NeuralNet.c  NeuralNet.h  Tensor.c  Tensor.h
